syntax = "proto3";

option csharp_namespace = "RentIt.Protos.Users";

package users;

message GetUserRequest {
  string user_id = 1;
}

message GetUserResponse {
  string user_id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
}

service UsersService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
}